# RByz

./: .gitignore  README.md
RcConn/: CMakeLists.txt
RcConn/include/: rc_conn.hpp
RcConn/src/: rc_conn.cpp
Results/: CMakeLists.txt  acc_compare.py  build.sh  get_times_vec.sh
Results/experiments/: acc_evolution_vd_size.py  acc_vs_test_renew.sh  acc_vs_test_renew_cf.sh  acc_vs_test_size.sh  acc_vs_test_size_exp.sh  acc_vs_test_sz.py  acc_vs_test_sz_bars.py  acc_vs_test_sz_nodev.py  attacks_acc.py  attacks_cf.sh  attacks_line_graph.py  attacks_mn.sh  byz_attacks.sh  byz_attacks_exp.sh  cf_acc_vs_test_size_nodev.sh  cpu_util.sh  extra_col_poison_byz.sh  extra_col_poison_nobyz.sh  logToDic.py  mn_acc_vs_test_size_nodev.sh  profiler_exp.sh  renew_freq.py  timeouts.py  timeouts_cf.sh  timeouts_mn.sh  ts_evo.py  used_in_agg.py  vanilla_run.sh
Results/src/: cpuTracker.cpp  profiler.cpp
fltrust/: CMakeLists.txt  cache.cmake  clients.pid  run_all.sh  run_client.sh  run_srvr.sh
fltrust/include/: FlippableMNIST.hpp  attacks.hpp  globalConstants.hpp  logger.hpp  mnistTrain.hpp  pch.hpp  rdmaOps.hpp  subsetSampler.hpp  tensorOps.hpp
fltrust/src/: FlippableMNIST.cpp  attacks.cpp  clnt.cpp  mnistTrain.cpp  rdmaOps.cpp  srvr.cpp  tensorOps.cpp
fltrust/src/include/: logger.hpp  mnistTrain.hpp  rdmaOps.hpp
rbyz/: .clang_format  CMakeLists.txt  CMakePresets.json  build.sh  cache.cmake  conanfile.py  debug_srvr.sh  mnist_model_params.pt  run_all.sh  run_client.sh  run_srvr.sh
rbyz/algorithm/include/: datasetSplitter.hpp  fltrustSrvr.hpp  rbyzClnt.hpp  rbyzSrvr.hpp
rbyz/algorithm/src/: datasetSplitter.cpp  fltrustSrvr.cpp  rbyzClnt.cpp  rbyzSrvr.cpp
rbyz/datasetLogic/include/: randomSubsetSampler.hpp  structs.hpp  subsetSampler.hpp
rbyz/datasetLogic/include/dataset/: registeredCIFAR10.hpp  registeredMNIST.hpp
rbyz/datasetLogic/include/manager/: baseRegDatasetMngr.hpp  iRegDatasetMngr.hpp  regCIFAR10Mngr.hpp  regMnistMngr.hpp
rbyz/datasetLogic/include/net/: residual_block.hpp  resnet.hpp
rbyz/datasetLogic/src/: transform.cpp
rbyz/datasetLogic/src/dataset/: registeredCIFAR10.cpp
rbyz/datasetLogic/src/manager/: baseRegDatasetMngr.cpp  regCIFAR10Mngr.cpp  regMnistMngr.cpp
rbyz/include/: attacks.hpp  entities.hpp  globalConstants.hpp  mnistTrain.hpp  rbyzAux.hpp  rdmaOps.hpp  registeredMNIST.hpp  subsetSampler.hpp  tensorOps.hpp
rbyz/include/datasetLogic/: baseMnistTrain.hpp  baseRegDatasetMngr.hpp  iRegDatasetMngr.hpp  mnistTrain.hpp  randomSubsetSampler.hpp  regCIFAR10Mngr.hpp  regMnistMngr.hpp  regMnistSplitter.hpp  registeredCIFAR10.hpp  registeredMNIST.hpp  registeredMnistTrain.hpp  regularMnistTrain.hpp  structs.hpp  transform.hpp
rbyz/include/entities/: clnt.hpp
rbyz/include/global/: globalConstants.hpp  logger.hpp  pch.hpp
rbyz/include/nets/: cifar10Net.hpp  mnistNet.hpp  nnet.hpp  resnet.hpp
rbyz/src/: attacks.cpp  clnt.cpp  mnistTrain.cpp  rbyzAux.cpp  rbyz_clnt.cpp  rdmaOps.cpp  srvr.cpp  tensorOps.cpp
rbyz/src/datasetLogic/: baseMnistTrain.cpp  baseRegDatasetMngr.cpp  mnistTrain.cpp  regCIFAR10Mngr.cpp  regMnistMngr.cpp  registeredCIFAR10.cpp  registeredMnistTrain.cpp  regularMnistTrain.cpp  transform.cpp
rbyz/src/entities/: clnt.cpp  srvr.cpp
rdma-api/: CMakeLists.txt  build.sh
rdma-api/include/: rdma-api.hpp
rdma-api/src/: rdma-api.cpp
shared/: CpuProfiler.hpp  GPUprofiler.hpp  MemoryProfiler.hpp  logger.hpp  macros.hpp  net.hpp  redis.hpp  util.hpp
